--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
                 <p>Issued by: SIMPLILEARN</p>
                 <p>Date: 01/2025</p>
             </div>
+             <!-- Certification 5 -->
+            <div class="certification">
+                <img src="simpllearn certificate cloud_page-0001.jpg" alt="Certification 5">
+                <h3>Diploma in French Language Studies - DELF B2</h3>
+                <p>Issued by: French Republic
+                   Ministry of National Education, Youth, and Sports</p>
+                <p>Date: 01/2022</p>
+            </div>
         </div>
     </div>
 </section>
