--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
              <!-- Certification 5 -->
             <div class="certification">
-                <img src="delfB2.png" alt="Certification 5">
+                <img src="IMAGES/delfB2.png" alt="Certification 5">
                 <h3>Diploma in French Language Studies - DELF B2</h3>
                 <p>Issued by: French Republic
                    Ministry of National Education, Youth, and Sports</p>
