--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <div class="skills-grid">
                 <div class="skill">HTML5</div>
                 <div class="skill">CSS</div>
+                <div class="skill">JS</div>
+                <div class="skill">PHP</div>
                 <div class="skill">C</div>
                 <div class="skill">C++</div>
                 <div class="skill">SQL</div>
